CHANGES
=======

3.9.1 (unreleased)
------------------

- ...

3.9.0 (2009-08-27)
------------------

- Some parts of zope.app.publisher packages was moved into this package
  during zope.app.publisher refactoring:
  
   * IModifiableUserPreferredLanguages adapter for requests
   * browser:defaultView and browser:defaultSkin ZCML directives
   * IHTTPView, IXMLRPCView and like interfaces
   * security ZCML declarations for some of zope.publisher classes

- Introduced ``IReRaiseException`` interface. If during publishing an
  exception occurs and for this exception an adapter is available that
  returns ``False`` on being called, the exception won't be reraised
  by the publisher. This happens only if ``handle_errors`` parameter
  of the ``publish()`` method is set to ``False``. Fixes problems when
  acting in a WSGI pipeline with a debugger middleware enabled.

  See https://bugs.launchpad.net/grok/+bug/332061 for details.

- Fix #98471: Restrict redirects to current host. This causes a ValueError to
  be raised in the case of redirecting to a different host. If this is
  intentional, the parameter `trusted` can be given.

- Moved dependency on zope.testing from install_requires to tests_require.

- Removed behavior of doing a time.sleep in the supportsRetry http request.

- Add a fix for Internet Explorer versions that upload files will full
  filesystem paths as filenames.

3.8.0 (2009-05-23)
------------------

- Moved IHTTPException, IMethodNotAllowed, and MethodNotAllowed from
  zope.app.http to zope.publisher.interfaces.http, fixing dependency
  cycles involving zope.app.http.

- Moved the DefaultViewName API from zope.app.publisher.browser to
  zope.publisher.defaultview, making it accessible to other packages
  that need it.

3.7.0 (2009-05-13)
------------------

- Move ``IView`` and ``IBrowserView`` interfaces into
  ``zope.browser.interfaces``, leaving BBB imports.

3.6.4 (2009-04-26)
------------------
